[workspace]
members = [
    "fungible",
    "meta-fungible"
]

resolver = "2"

[workspace.dependencies]
async-graphql = { version = "5.0.7", default-features = false }
async-trait = "0.1.58"
bcs = "0.1.3"
futures = "0.3.24"
linera-sdk = "0.6.0"
linera-views = "0.6.0"
log = "0.4.20"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'

[profile.bench]
debug = true
