[package]
name = "meta-fungible"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { workspace = true, default-features = false }
async-trait = {workspace = true}
bcs = {workspace = true}
futures = {workspace = true}
linera-sdk = {workspace = true}
linera-views = {workspace = true}
serde = { workspace = true, features = ["derive"] }
serde_json = {workspace = true}
thiserror = {workspace = true}
fungible = {version = "0.1.0",path = "../fungible"}

[dev-dependencies]
linera-sdk = { workspace = true, features = ["test"] }
webassembly-test = "0.1.0"

[[bin]]
name = "meta-fungible_contract"
path = "src/contract.rs"

[[bin]]
name = "meta-fungible_service"
path = "src/service.rs"
